mention gnats merge

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -73,6 +73,14 @@ i
 <table>
 
 <tr><td valign="top">
+<b>December 20, 2000</b>
+</td><td>
+The Java Gnats database has been merged into the gcc Gnats database.
+The old database continues to exist but only for reference purposes;
+it is now read-only.
+</td></tr>
+
+<tr><td valign="top">
 <b>December 9, 2000</b>
 </td><td>
 Thanks to Richard Henderson's recent libffi changes, the libgcj bytecode interpreter is now enabled for Alpha systems.
@@ -225,7 +233,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.58 2000/12/13 05:46:05 apbianco Exp $
+$Id: index.html,v 1.59 2000/12/18 23:20:51 warrenl Exp $
 </small>
 </address>
 
