--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -138,7 +138,7 @@ complete compatibility.
 <tr><td valign="top">
 <b>October 22, 2000</b>
 </td><td>
-Rolf Masmussen has checked in a large piece of code implementing most
+Rolf Rasmussen has checked in a large piece of code implementing most
 of Xlib-based AWT peers as well as parts of J2D.  Bryce McKinlay has
 also been working on AWT.
 </td></tr>
@@ -233,7 +233,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.59 2000/12/18 23:20:51 warrenl Exp $
+$Id: index.html,v 1.60 2000/12/23 21:52:31 tromey Exp $
 </small>
 </address>
 
