Add trailing slash to URL in libstdc++ link.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -116,7 +116,7 @@ a new <a href="gccmission.html">mission statement</a>.
 
 <p>Currently GCC contains front-ends for C, C++, Objective C, Chill,
 Fortran, and <a href="http://sources.redhat.com/java/">Java</A>
-as well as libraries for these languages (<a href="libstdc++">libstdc++</a>,
+as well as libraries for these languages (<a href="libstdc++/">libstdc++</a>,
 libgcj,...).
 </p>
 
