--- a/htdocs/egcs-1.1/caveats.html
+++ b/htdocs/egcs-1.1/caveats.html
@@ -18,7 +18,8 @@
 
   <li> Some versions of the Linux kernel have bugs which prevent them
   from being compiled or from running when compiled by EGCS.  See
-  <a href="../faq.html#linuxkernel">the FAQ</a> for additional information.
+  <a href="http://gcc.gnu.org/fom_serv/cache/24.html">the FAQ</a>
+  for additional information.
 
   <li> In general, EGCS is more rigorous about rejecting invalid C++ code
   or deprecated C++ constructs than g++-2.7, g++-2.8 or EGCS 1.0.  As a result
