Make our preference for gccbug over gnatsweb more clear. Minor changes.

--- a/htdocs/gnats.html
+++ b/htdocs/gnats.html
@@ -12,13 +12,17 @@ bug tracking system, and it is now used to track GCC bug reports, as
 well. Before submitting a bug report, please read the <a
 href="bugs.html">general instructions</a>.</p>
 
-<p>You can either use the gccbug program that is automatically installed
-with current versions of GCC and submits the bug report by e-mail or the <a
-href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;user=guest&amp;password=guest&amp;cmd=login">gnatsweb</a> interface.
-Both techniques use the same bug database.</p>
+<p>The preferred way of submitting a bug report is by means of the gccbug
+program that is automatically installed with current versions of GCC
+and submits the bug report by e-mail.</p>
 
-<p>When you use the Web interface, make sure you include an e-mail
-address, so we can inform you when the status of your report changes.</p>
+<p>If this is not possible, please use the <a
+href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;user=guest&amp;password=guest&amp;cmd=login">gnatsweb</a>
+interface. Make sure you include an e-mail address, so we can inform
+you when the status of your report changes.</p>
+
+<p>Both techniques use the same bug database.</p>
+
 
 <h1 align="center">Filling out a report</h1> 
 
