- Make "all mailing lists" include libstdc++ lists. - Add box items for gcc-regression, gcc-prs, libstdc++, libstdc++-cvs and   libstdc++-prs. - Rearrange box items into three rows, with one row for libstdc++ lists.

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -48,7 +48,7 @@ The search will include what you marked below and
 <option selected value="">
 if nothing is marked, all pages.
 <!-- Small pattern that matches all mailing lists.  -->
-<option value="/ml/g">
+<option value="/ml/g|/ml/l">
 all mailing lists.
 <!-- By not mentioning (.or)g/ml for the mailing lists, we exclude them
      and "restrict" to everything else.  Since we're in a restrict
@@ -113,14 +113,6 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <th>
 <input type=checkbox name=restrict value="/ml/gcc-testresults">
 <font size=-1> ...-testresults</font>
-</th>
-<th>
-<input type=checkbox name=restrict value="/ml/gcc-announce">
-<font size=-1> ...-announce</font>
-</th>
-<th>
-<input type=checkbox name=restrict value="/ml/gcc-cvs-wwwdocs">
-<font size=-1> ...-cvs-wwwdocs</font>
 </th>
 </tr>
 <tr align=left>
@@ -324,6 +316,47 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-testresults/1999-02">Feb 1999
 <option value="gcc-testresults/1999-01">Jan 1999
 </select></td>
+</tr>
+
+<tr align=left>
+<th>
+<input type=checkbox name=restrict value="/ml/gcc-regression/">
+<font size=-1> ...-regression</font>
+</th>
+<th>
+<input type=checkbox name=restrict value="/ml/gcc-prs/">
+<font size=-1> ...-prs</font>
+</th>
+<th>
+<input type=checkbox name=restrict value="/ml/gcc-announce/">
+<font size=-1> ...-announce</font>
+</th>
+<th>
+<input type=checkbox name=restrict value="/ml/gcc-cvs-wwwdocs/">
+<font size=-1> ...-cvs-wwwdocs</font>
+</th>
+</tr>
+<tr align=left>
+<td><select name=restrict multiple size=6>
+<option value="gcc-regression/2000-12">Dec 2000
+<option value="gcc-regression/2000-11">Nov 2000
+<option value="gcc-regression/2000-10">Oct 2000
+<option value="gcc-regression/2000-09">Sep 2000
+<option value="gcc-regression/2000-08">Aug 2000
+<option value="gcc-regression/2000-07">Jul 2000
+<option value="gcc-regression/2000-06">Jun 2000
+<option value="gcc-regression/2000-05">May 2000
+</select></td>
+<td><select name=restrict multiple size=6>
+<option value="gcc-prs/2000-q4">Oct-Dec 2000
+<option value="gcc-prs/2000-q3">Jul-Sep 2000
+<option value="gcc-prs/2000-q2">Apr-Jun 2000
+<option value="gcc-prs/2000-q1">Jan-Mar 2000
+<option value="gcc-prs/1999-q4">Oct-Dec 1999
+<option value="gcc-prs/1999-q3">Jul-Sep 1999
+<option value="gcc-prs/1999-q2">Apr-Jun 1999
+<option value="gcc-prs/1999-q1">Jan-Mar 1999
+</select></td>
 <td><select name=restrict multiple size=6>
 <option value="gcc-announce/2000">2000
 <option value="gcc-announce/1999">1999
@@ -332,6 +365,53 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <td><select name=restrict multiple size=6>
 <option value="gcc-cvs-wwwdocs/2000">2000
 <option value="gcc-cvs-wwwdocs/1999">1999
+</select></td>
+</tr>
+
+<tr align=left>
+<th>
+<input type=checkbox name=restrict value="/ml/libstdc++/">
+<font size=-1> libstdc++</font>
+</th>
+<th>
+<input type=checkbox name=restrict value="/ml/libstdc++-cvs/">
+<font size=-1> ...-cvs</font>
+</th>
+<th>
+<input type=checkbox name=restrict value="/ml/libstdc++-prs/">
+<font size=-1> ...-prs</font>
+</th>
+</tr>
+<tr align=left>
+<td><select name=restrict multiple size=6>
+<option value="libstdc++/2000-12">Dec 2000
+<option value="libstdc++/2000-11">Nov 2000
+<option value="libstdc++/2000-10">Oct 2000
+<option value="libstdc++/2000-09">Sep 2000
+<option value="libstdc++/2000-08">Aug 2000
+<option value="libstdc++/2000-07">Jul 2000
+<option value="libstdc++/2000-q2">Apr-Jun 2000
+<option value="libstdc++/2000-q1">Jan-Mar 2000
+<option value="libstdc++/1999-q4">Oct-Dec 1999
+<option value="libstdc++/1999-q3">Jul-Sep 1999
+<option value="libstdc++/1999-q2">Apr-Jun 1999
+<option value="libstdc++/1999-q1">Jan-Mar 1999
+</select></td>
+<td><select name=restrict multiple size=6>
+<option value="libstdc++-cvs/2000-q4">Oct-Dec 2000
+<option value="libstdc++-cvs/2000-q3">Jul-Sep 2000
+<option value="libstdc++-cvs/2000-q2">Apr-Jun 2000
+<option value="libstdc++-cvs/2000-q1">Jan-Mar 2000
+<option value="libstdc++-cvs/1999-q4">Oct-Dec 1999
+<option value="libstdc++-cvs/1999-q3">Jul-Sep 1999
+</select></td>
+<td><select name=restrict multiple size=6>
+<option value="libstdc++-prs/2000-q4">Oct-Dec 2000
+<option value="libstdc++-prs/2000-q3">Jul-Sep 2000
+<option value="libstdc++-prs/2000-q2">Apr-Jun 2000
+<option value="libstdc++-prs/2000-q1">Jan-Mar 2000
+<option value="libstdc++-prs/1999-q4">Oct-Dec 1999
+<option value="libstdc++-prs/1999-q3">Jul-Sep 1999
 </select></td>
 </tr>
 </table>
