* build-snapshot.html: Made changes suggested by Per.

--- a/htdocs/java/build-snapshot.html
+++ b/htdocs/java/build-snapshot.html
@@ -52,10 +52,10 @@ you get Libgc from an other cvs or snapshot repository.
 3. Move the snapshot into the compile dir, e.g.
 
   $ cd compile
-  $ mv ../egcs-20001211.tar.gz .
+  $ mv ../gcc-20001211.tar.gz .
   $ gunzip *.gz
   $ tar xfv *.tar
-  $ ln -s egcs-20001211 egcs
+  $ ln -s gcc-20001211 gcc
 </pre>
 </td>
 </tr>
@@ -65,7 +65,7 @@ you get Libgc from an other cvs or snapshot repository.
 <pre>
 4. Tell the build system you want to build libgcj
 
-  Have a look at the toplevel configure.in (egcs/configure.in) and
+  Have a look at the toplevel configure.in (gcc/configure.in) and
   make sure that the variable `noconfigdirs' isn't assigned to
   something (like target-libjava or ${libgcj}.)
 <br>
@@ -77,12 +77,12 @@ you get Libgc from an other cvs or snapshot repository.
 <tr bgcolor="cccccc">
 <td>
 <pre>
-5. Compile and install egcs/gcj/libgcj
+5. Compile and install gcc/gcj/libgcj
 
-  $ cd egcs
+  $ cd compile
   $ mkdir objdir
   $ cd objdir
-  $ ../configure --enable-threads=posix --prefix=/home/joerg/gcc \
+  $ ../gcc/configure --enable-threads=posix --prefix=/home/joerg/gcc \
     --enable-shared --enable-languages=c++,java --disable-new-gxx-abi \
     --with-as=/opt/gnu/bin/as --with-ld=/opt/gnu/bin/ld
   $ make bootstrap
@@ -97,7 +97,7 @@ The Boehm GC is the collector picked up by default.
 If you compile under Linux you could omit the last two options. Under
 Solaris you'll need them. If you omit '--prefix' the compiled source
 will be installed under /usr/local. For more information about
-installing egcs and/or configuration options see:
+installing gcc and/or configuration options see:
 
   <a href="http://gcc.gnu.org/install/index.html">http://gcc.gnu.org/install/index.html</a>
 
