* gcj2.html: Cleanup and point to build-snapshot.html as 	suggested by Immanuel, Gidado-Yisa" <avm3@cdc.gov>. 	* libgcj2.html: Cleanup and removed vestigial library build 	instructions.

--- a/htdocs/java/libgcj2.html
+++ b/htdocs/java/libgcj2.html
@@ -9,7 +9,7 @@
     <h2>What is it?</h2>
     
     <p>``libgcj'' is the runtime that goes along with the <a
-    href="gcj.html">gcj</a> front end to GCC.  libgcj includes parts
+    href="gcj2.html">gcj</a> front end to GCC.  libgcj includes parts
     of the Java Class Libraries, plus glue to connect the libraries to
     the compiler and the underlying OS.
 
@@ -23,44 +23,21 @@
     <h2>What is missing?</h2>
 
     <p>The runtime is not yet fully complete.  Parts of the standard
-    class libraries are missing, and some libraries (such as AWT) have
-    not even been started.  Also, there is <emph>not</emph> a bytecode
-    interpreter; the runtime currently assumes your application will
-    be entirely compiled.
+    class libraries are missing (most notably AWT), though much of the
+    equivalent of JDK 1.2 has been supported.
+    Also, the bytecode interpreter available only on certain platforms.
 
     <h2>How to get it</h2>
 
-    <p>The easiest way to get libgcj is to check it out from the
-    anonymous cvs repository.  Here's how:
-    <pre>
-      cvs -d :pserver:anoncvs@anoncvs.cygnus.com:/cvs/java login
-        (password is ``anoncvs'')
-      cvs -z 9 -d :pserver:anoncvs@anoncvs.cygnus.com:/cvs/java co libgcj
-    </pre>
-
-    <p>For those without cvs access, you can find libgcj snapshots
-    in <a href="ftp://sources.redhat.com/pub/java/snapshots/">ftp://sources.redhat.com/pub/java/snapshots/</a>.
-
-    <p>You can also <a href="/cgi-bin/cvsweb.cgi/libgcj/?cvsroot=java">
-	view the cvs archive</a> via cvsweb.
+    <p>Now that libgcj is part of GCC, just follow the directions for
+    <a href="download.html">downloading</a> the GCJ front-end.
 
     <h2>How to build it</h2>
 
-    <p>libgcj follows the typical GNU style for configuration and
-    building.  You'll need to have gcj built and in your PATH before
-    you try to build libgcj.  Once you've done that, the following
-    should suffice (note that builds in the source tree probably will
-    not work at the current time):
+    <p>Just follow the directions for
+    <a href="build-snapshot.html"> building</a> GCJ.
 
-      <pre>
-      mkdir build
-      cd build
-      ../libgcj/configure
-      make
-      make install
-      </pre>
-
-    There are a few options you might consider passing to
+    <p>There are a few options you might consider passing to
     ``configure'':
 
     <dl>
