--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -120,6 +120,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
      this page is checked into CVS, which adds a level of complexity that
      is not currently handled well.  -->
 <td><select name=restrict multiple size=6>
+<option value="gcc/2001-01">Jan 2001
 <option value="gcc/2000-12">Dec 2000
 <option value="gcc/2000-11">Nov 2000
 <option value="gcc/2000-10">Oct 2000
@@ -162,6 +163,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-bugs/2001-01">Jan 2001
 <option value="gcc-bugs/2000-12">Dec 2000
 <option value="gcc-bugs/2000-11">Nov 2000
 <option value="gcc-bugs/2000-10">Oct 2000
@@ -204,6 +206,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-bugs/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-patches/2001-01">Jan 2001
 <option value="gcc-patches/2000-12">Dec 2000
 <option value="gcc-patches/2000-11">Nov 2000
 <option value="gcc-patches/2000-10">Oct 2000
@@ -238,6 +241,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-patches/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-help/2001-01">Jan 2001
 <option value="gcc-help/2000-12">Dec 2000
 <option value="gcc-help/2000-11">Nov 2000
 <option value="gcc-help/2000-10">Oct 2000
@@ -257,6 +261,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs/2001-01">Jan 2001
 <option value="gcc-cvs/2000-12">Dec 2000
 <option value="gcc-cvs/2000-11">Nov 2000
 <option value="gcc-cvs/2000-10">Oct 2000
@@ -291,6 +296,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-cvs/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-testresults/2001-01">Jan 2001
 <option value="gcc-testresults/2000-12">Dec 2000
 <option value="gcc-testresults/2000-11">Nov 2000
 <option value="gcc-testresults/2000-10">Oct 2000
@@ -338,6 +344,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<option value="gcc-regression/2001-01">Jan 2001
 <option value="gcc-regression/2000-12">Dec 2000
 <option value="gcc-regression/2000-11">Nov 2000
 <option value="gcc-regression/2000-10">Oct 2000
@@ -348,6 +355,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-regression/2000-05">May 2000
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-prs/2001-q1">Jan-Mar 2001
 <option value="gcc-prs/2000-q4">Oct-Dec 2000
 <option value="gcc-prs/2000-q3">Jul-Sep 2000
 <option value="gcc-prs/2000-q2">Apr-Jun 2000
@@ -358,11 +366,13 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-prs/1999-q1">Jan-Mar 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-announce/2001">2001
 <option value="gcc-announce/2000">2000
 <option value="gcc-announce/1999">1999
 <option value="gcc-announce/1997-1998">1997-8
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs-wwwdocs/2001">2000
 <option value="gcc-cvs-wwwdocs/2000">2000
 <option value="gcc-cvs-wwwdocs/1999">1999
 </select></td>
@@ -384,6 +394,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<option value="libstdc++/2001-01">Jan 2001
 <option value="libstdc++/2000-12">Dec 2000
 <option value="libstdc++/2000-11">Nov 2000
 <option value="libstdc++/2000-10">Oct 2000
@@ -398,6 +409,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="libstdc++/1999-q1">Jan-Mar 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="libstdc++-cvs/2001-q1">Jan-Mar 2001
 <option value="libstdc++-cvs/2000-q4">Oct-Dec 2000
 <option value="libstdc++-cvs/2000-q3">Jul-Sep 2000
 <option value="libstdc++-cvs/2000-q2">Apr-Jun 2000
@@ -406,6 +418,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="libstdc++-cvs/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="libstdc++-prs/2001-q1">Jan-Mar 2001
 <option value="libstdc++-prs/2000-q4">Oct-Dec 2000
 <option value="libstdc++-prs/2000-q3">Jul-Sep 2000
 <option value="libstdc++-prs/2000-q2">Apr-Jun 2000
