* projects/cpplib.html: Update.

--- a/htdocs/projects/cpplib.html
+++ b/htdocs/projects/cpplib.html
@@ -7,8 +7,8 @@
 <body>
 <h1 align="center">Projects relating to cpplib</h1>
 
-<p>As of 7 January 2000, cpplib has largely been completed.  It has
-received six months of testing as the only preprocessor used by
+<p>As of 7 January 2001, cpplib has largely been completed.  It has
+received almost one year of testing as the only preprocessor used by
 development gcc, and I'm pretty happy with its stability at this point.</p>
 
 <p>cpplib is now linked into the C, C++ and Objective C front ends; this
