* install/configure.html: Update -enable-cpplib refs.

--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -123,9 +123,11 @@ GCC.  A partial list of supported <tt>options</tt>:
   <li> <tt>--enable-cpp</tt> -- Specify that a shell script which emulates
   traditional cpp functionality should be installed.
 
-  <li> <tt>--enable-cpplib</tt> -- Specify that the functionality of CPP should
-  be integrated into the compiler itself.  This is still under development, but
-  may be useful in limited situations.  This option is never enabled by default.
+  <li> <tt>--enable-cpplib</tt> -- Specify that the functionality of
+  CPP should be integrated into the compiler itself.  This option is
+  not supported by snapshots since November 2000.  In snapshots where
+  it is supported, it is not enabled by default, except for snapshots
+  very close to November 2000.
 
   <li> <tt>--without-fast-fixincludes</tt> -- Specify that the old, slower
   method of fixing the system header files should be used. 
