2001-01-09  Alexandre Petit-Bianco  <apbianco@cygnus.com>
        * done.html (Tamanoir): New entry.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -144,13 +144,33 @@
 	 </td>
       </tr>
       <!-- End Swarm -->
+      <!-- Tamanoir -->
+      <tr valign=top>
+        <td><B>Tamanoir</B></td>
+	<td>Tamanoir system is a complete framework that allows users
+	    to easily deploy and maintain distributed active routers
+	    on wide area networks. In the rapidly expanding field of
+	    active and programmable networks, Tamanoir is designed
+	    around a new kind of architecture dedicated to high
+	    performance active networking. Its implementation features
+	    a multi-threading approach to combine performance and
+	    portability of services. It's written in Java and
+	    standardly built using gcj.
+	</td>
+	<td>The <A
+	    HREF="http://resam.univ-lyon1.fr/~tamanoir">Tamanoir</A>
+	    page. <A HREF="/ml/java-discuss/2001-01/msg00069.html">
+	    Entry</A> submitted by <A HREF="jpgelas@lhpcm.univ-lyon1.fr">
+	    Jean Patrick Gelas</A>.
+      </tr>
+      <!-- End Tamanoir -->
       </table>
     </td>
   </tr>
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: done.html,v 1.8 2000/11/29 08:15:18 apbianco Exp $ </small></address>
+<small> $Id: done.html,v 1.9 2000/12/18 23:20:51 warrenl Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
