Document libgcj and preprocessor categories.

--- a/htdocs/gnats.html
+++ b/htdocs/gnats.html
@@ -86,6 +86,8 @@ does not foo", "objc crashes when doing bar".</dd>
   <dd>A problem with the Java compiler.</dd>
   <dt>libf2c</dt>
   <dd>A problem in the Fortran runtime library.</dd>
+  <dt>libgcj</dt>
+  <dd>A problem in the Java runtime library.</dd>
   <dt>libobjc</dt>
   <dd>A problem in the Objective C runtime library.</dd>
   <dt>libstdc++</dt>
@@ -96,6 +98,8 @@ does not foo", "objc crashes when doing bar".</dd>
   <dd>A problem with the Objective C compiler.</dd>
   <dt>optimization</dt>
   <dd>A problem only occurring under optimization.</dd>
+  <dt>preprocessor</dt>
+  <dd>A problem with the C preprocessor.</dd>
   <dt>target</dt>
   <dd>The problem depends on the specific target architecture.</dd>
   <dt>web</dt>
