Add more project suggestions.

--- a/htdocs/projects/web.html
+++ b/htdocs/projects/web.html
@@ -21,6 +21,15 @@ of being implemented soon. ;-)</p>
     non-insiders. [Marc Lehmann]
 <li>Write down some information concerning the testsuite.
     This might be combined with the previous item. [Marc Lehmann]
+<li>Include manuals for the latest release in onlinedocs, as well as
+    those for current development.</li>
+<li>Arrange for the preprocessing (style.mhtml) to apply to the copy
+    of the web pages on www.gnu.org as well as that on
+    gcc.gnu.org.</li>
+<li>Merge <a href="../libstdc++/links.html">libstdc++/links.html</a>
+    into <a href="../readings.html">readings.html</a>, and <a
+    href="../libstdc++/thanks.html">libstdc++/thanks.html</a> into
+    contrib.texi.</li>
 </ul>
 
 </body>
