Update status of initializers.  Note that this page relates to CVS GCC.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -16,6 +16,9 @@ library support, or desirable in conjunction with it.  Note that the
 headers required of conforming freestanding implementations (clause 4
 paragraph 6) do not count as library issues.</p>
 
+<p>This page describes the C99 support in mainline GCC CVS, not in any
+particular release.</p>
+
 <p>See below the table for further notes on some issues.
 
 <table border>
@@ -117,7 +120,7 @@ paragraph 6) do not count as library issues.</p>
 </tr>
 
 <tr><td><em>designated initializers</em></td>
-    <td></td><td></td><td>Broken</td>
+    <td></td><td>Done</td><td></td>
     <td></td>
 </tr>
 
@@ -263,8 +266,8 @@ paragraph 6) do not count as library issues.</p>
 </tr>
 
 <tr><td><em>relaxed constraints on aggregate<br>and union initialization</em></td>
+    <td></td><td>Done</td>
     <td></td><td></td>
-    <td>Broken</td><td></td>
 </tr>
 
 <tr><td><em>relaxed restrictions on portable header names</em></td>
@@ -323,10 +326,6 @@ and should be a distinct array from any identical string literal.</li>
 <li>GCC doesn't have <code>wprintf</code>, <code>wscanf</code> and
 <code>wcsftime</code> format checking support.</li>
 
-<li>Non-constant aggregate initializers cause an error (rather than a
-warning) with <code>-pedantic</code>, irrespective of the standard
-version selected.</li>
-
 <li>Complex numbers support may be broken (some problems with
 passing/returning complex values on 64-bit targets, and not checked
 against the requirements of the C99 standard).  However, the
@@ -348,9 +347,6 @@ copied from read-only storage, depending on the literal; or placed in
 writable storage, when of static storage duration).  Getting this
 right requires the new block scopes for selection and iteration
 statements to be done first.</li>
-
-<li>Designated initializers in GCC do not support overriding previous
-initializers for a subobject.</li>
 
 <li>The list above differs from that in the C99 standard as follows:
 "LIA compatibility annex" is removed, since it refers to C99's
