Add project to document front end interface.

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -115,6 +115,13 @@ but which have complex result type for complex arguments.  The design
 for these builtins should be discussed with the gcc and libc-alpha
 lists.</li>
 
+<li>Fully document the interface of front ends to GCC (that is, the
+<code>tree</code> interfaces, and the various functions, hooks, etc.,
+that a front end must or may provide).  <code>gcc/c-tree.texi</code>
+includes some of this information; <code>gcc/LANGUAGES</code> contains
+incomplete information about changes that have been made to this
+interface.</li>
+
 </ul>
 
 <h2>Better builtin string functions</h2>
