Add note about using -Wall before reporting incorrect compilation of code.

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -26,6 +26,10 @@ CodeSourcery's Online Test Compilation</a>.  If you want to report a
 bug with egcs 1.x or versions of GCC before 2.95 we strongly recommend
 upgrading to the current release first.</p>
 
+<p>Before reporting that GCC compiles your code incorrectly, please
+compile it with <code>gcc -Wall</code> and see whether this shows
+anything wrong with your code that could be the cause instead of a bug
+in GCC.</p>
 
 <h2>Summarized bug reporting instructions</h2>
 
