--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -153,6 +153,13 @@ hope to release by the end of Q1 2001.
 
 <dl>
 
+<dt><b>January 15, 2001</b></dt>
+<dd>
+The GCC development tree is in a slush state, with the goal of <a
+href="gcc-3.0/branch.html">stabilization for branching for GCC 3.0</a>.
+</dd>
+
+<dd>
 <dt><b>December 19, 2000</b></dt>
 <dd>
 The runtime library for the <a href="http://sources.redhat.com/java/">
