--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -79,6 +79,7 @@ Numbers in parentheses are EGCS release numbers. </p>
 <tr><td>2.6.1</td><td>November 1, 1994</td></tr>
 <tr><td>2.6.0</td><td>July 14, 1994</td></tr>
 
+<tr><td>2.5.8</td><td>January 24, 1994</td></tr>
 <tr><td>2.5.7</td><td>December 12, 1993</td></tr>
 <tr><td>2.5.6</td><td>December 3, 1993</td></tr>
 <tr><td>2.5.5</td><td>November 27, 1993</td></tr>
