--- a/htdocs/gcc-3.0/branch.html
+++ b/htdocs/gcc-3.0/branch.html
@@ -32,12 +32,26 @@ email to <a href="mailto:mark@codesourcery.com">Mark Mitchell</a>.</p>
 href="mailto:chris@ludwig-alpha.unil.ch">Christian Iseli<a><td>
 <tr><td>armv4l-unknown-linux-gnu
 <td><a href="mailto:philb@gnu.org">Philip Blundell</a>
-<tr><td>i686-pc-linux-gnu<td><a
-href="mailto:mark@codesourcery.com">Mark Mitchell</a><td>
-<tr><td>mips-sgi-irix6.5<td><a
-href="mailto:mark@codesourcery.com">Mark Mitchell</a><td>
-<tr><td>sparc-sun-solaris-2.7<td>
-<a href="mailto:chris@ludwig-alpha.unil.ch">Christian Iseli<a><td>
+<tr>
+  <td>hppa1.1-hp-hpux10.20
+  <td><a href="mailto:chris@ludwig-alpha.unil.ch">Christian Iseli<a>
+  <td>Bootstrap Failure
+<tr>
+  <td>i386-pc-linux-gnu
+  <td><a href="mailto:doko@cs.tu-berlin.de">Matthias Klose</a>
+  <td>
+<tr>
+  <td>i686-pc-linux-gnu
+  <td><a href="mailto:mark@codesourcery.com">Mark Mitchell</a>
+  <td>
+<tr>
+  <td>mips-sgi-irix6.5
+  <td><a href="mailto:mark@codesourcery.com">Mark Mitchell</a>
+  <td>
+<tr>
+  <td>sparc-sun-solaris-2.7
+  <td><a href="mailto:chris@ludwig-alpha.unil.ch">Christian Iseli<a>
+  <td><a href="sparc-sun-solaris-2.7.log">Test Summary</a>
 </table>
 
 <h2>Testing</h2>
