--- a/htdocs/gcc-3.0/branch.html
+++ b/htdocs/gcc-3.0/branch.html
@@ -49,6 +49,10 @@ href="mailto:chris@ludwig-alpha.unil.ch">Christian Iseli<a><td>
   <td><a href="mailto:mark@codesourcery.com">Mark Mitchell</a>
   <td>
 <tr>
+  <td>powerpc-ibm-aix4.3.3.0
+  <td><a href="mailto:dje@watson.ibm.com">David Edelsohn</a>
+  <td>
+<tr>
   <td>sparc-sun-solaris-2.7
   <td><a href="mailto:chris@ludwig-alpha.unil.ch">Christian Iseli<a>
   <td><a href="sparc-sun-solaris-2.7.log">Test Summary</a>
