--- a/htdocs/gcc-3.0/branch.html
+++ b/htdocs/gcc-3.0/branch.html
@@ -28,10 +28,14 @@ email to <a href="mailto:mark@codesourcery.com">Mark Mitchell</a>.</p>
 <table align="center">
 <caption>Platform Status</caption>
 <tr><th>Triplet<th>Volunteer<th>Status
-<tr><td>alpha-*-linux-gnu<td><a
-href="mailto:chris@ludwig-alpha.unil.ch">Christian Iseli<a><td>
-<tr><td>armv4l-unknown-linux-gnu
-<td><a href="mailto:philb@gnu.org">Philip Blundell</a>
+<tr>
+  <td>alphaev56-unknown-linux-gnu
+  <td><a href="mailto:chris@ludwig-alpha.unil.ch">Christian Iseli<a>
+  <td><a href="alphaev56-unknown-linux-gnu">Test Summary</a>
+<tr>
+  <td>armv4l-unknown-linux-gnu
+  <td><a href="mailto:philb@gnu.org">Philip Blundell</a>
+  <td>
 <tr>
   <td>hppa1.1-hp-hpux10.20
   <td><a href="mailto:chris@ludwig-alpha.unil.ch">Christian Iseli<a>
