--- a/htdocs/gcc-3.0/branch.html
+++ b/htdocs/gcc-3.0/branch.html
@@ -31,7 +31,7 @@ email to <a href="mailto:mark@codesourcery.com">Mark Mitchell</a>.</p>
 <tr>
   <td>alphaev56-unknown-linux-gnu
   <td><a href="mailto:chris@ludwig-alpha.unil.ch">Christian Iseli<a>
-  <td><a href="alphaev56-unknown-linux-gnu">Test Summary</a>
+  <td><a href="alphaev56-unknown-linux-gnu.log">Test Summary</a>
 <tr>
   <td>armv4l-unknown-linux-gnu
   <td><a href="mailto:philb@gnu.org">Philip Blundell</a>
