* contrib.html: Mention gcc-patches and link to gcc contribution 	page. 	* contribute.html: Removed. 	* new/*: Removed. 	* done.html (Fluid Dynamics): New entry. 	* build-snapshot.html: We no longer need the old ABI.

--- a/htdocs/java/build-snapshot.html
+++ b/htdocs/java/build-snapshot.html
@@ -83,14 +83,11 @@ you get Libgc from an other cvs or snapshot repository.
   $ mkdir objdir
   $ cd objdir
   $ ../gcc/configure --enable-threads=posix --prefix=/home/joerg/gcc \
-    --enable-shared --enable-languages=c++,java --disable-new-gxx-abi \
+    --enable-shared --enable-languages=c++,java \
     --with-as=/opt/gnu/bin/as --with-ld=/opt/gnu/bin/ld
   $ make bootstrap
   $ make
   $ make install
-
-The "--disable-new-gxx-abi" is still required to build libgcj, until
-Java gets compatible with the new C++ ABI.
 
 The Boehm GC is the collector picked up by default.
 
