--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -164,13 +164,35 @@
 	    Jean Patrick Gelas</A>.
       </tr>
       <!-- End Tamanoir -->
+      <!-- Fluid Dynamics -->
+      <tr valign=top>
+        <td><B>Fluid Dynamics</B></td>
+	<td>Alejandro Rodríguez Gallego, at ICAI University (Spain)
+	    has spent two years developing a Java program to solve
+	    fluid dynamics.  He says:<p>
+
+	    <quote>
+	    I have recently tested my program with GCJ and I have got
+	    an incredible performance increase over HotSpot v2 (JDK 1.3 for
+	    linux). -50% RAM were needed and execution time reduced in -15%.<p>
+
+	    GCJ will be the main compiler for my program.<p>
+	    </quote>
+	</td>
+	<td>The <A
+	    HREF="http://www.dfc.icai.upco.es/balrog/adfc.html">ADFC</A>
+	    page. <A HREF="/ml/java-discuss/2001-01/msg00228.html">
+	    Entry</A> submitted by <A HREF="mailto:balrog@amena.com">
+	    Alejandro Rodríguez Gallego</A>.
+      </tr>
+      <!-- End Fluid Dynamics -->
       </table>
     </td>
   </tr>
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: done.html,v 1.9 2000/12/18 23:20:51 warrenl Exp $ </small></address>
+<small> $Id: done.html,v 1.10 2001/01/09 16:25:58 apbianco Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
