--- a/htdocs/gcc-3.0/branch.html
+++ b/htdocs/gcc-3.0/branch.html
@@ -51,7 +51,7 @@ email to <a href="mailto:mark@codesourcery.com">Mark Mitchell</a>.</p>
 <tr>
   <td>mips-sgi-irix6.5
   <td><a href="mailto:mark@codesourcery.com">Mark Mitchell</a>
-  <td>
+  <td><a href="mips-sgi-irix-6.5.log">Test Summary</a>
 <tr>
   <td>powerpc-ibm-aix4.3.3.0
   <td><a href="mailto:dje@watson.ibm.com">David Edelsohn</a>
