--- a/htdocs/gcc-3.0/branch.html
+++ b/htdocs/gcc-3.0/branch.html
@@ -35,7 +35,7 @@ email to <a href="mailto:mark@codesourcery.com">Mark Mitchell</a>.</p>
 <tr>
   <td>armv4l-unknown-linux-gnu
   <td><a href="mailto:philb@gnu.org">Philip Blundell</a>
-  <td>
+  <td>Bootstrap Failure
 <tr>
   <td>hppa1.1-hp-hpux10.20
   <td><a href="mailto:chris@ludwig-alpha.unil.ch">Christian Iseli<a>
