Add docs for latest releases as well as for current developement.  Fix HTML.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -8,25 +8,41 @@
 
 <h1 align="center">GCC online documentation</h1>
 
-<p>Please note that this documentation refers to current
-development.  Some information may not be applicable to any
+<h2>Latest releases</h2>
+
+<p>These are manuals for the latest full releases.</p>
+
+<ul>
+  <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/gcc_toc.html">GCC
+       2.95.2 Manual</a></li>
+</ul>
+
+
+<h2>Current development</h2>
+
+<p>Please note that the following documentation refers to <EM>current
+development</EM>.  Some information may not be applicable to any
 existing release.</p>
 
 <ul>
-  <li><a href="../install/index.html">GCC Installation Instructions</a>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gcc_toc.html">GCC Manual</a>
-  <li><a href="http://gcc.gnu.org/onlinedocs/g77_toc.html">G77 Manual</a>
+  <li><a href="../install/index.html">GCC Installation Instructions</a></li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/gcc_toc.html">GCC Manual</a></li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/g77_toc.html">G77 Manual</a></li>
   <ul> 
-     <li><a href="http://gcc.gnu.org/onlinedocs/g77_news.html">G77 News</a>
-     <li><a href="http://gcc.gnu.org/onlinedocs/g77_bugs.html">G77 Bugs</a>
+     <li><a href="http://gcc.gnu.org/onlinedocs/g77_news.html">G77 News</a></li>
+     <li><a href="http://gcc.gnu.org/onlinedocs/g77_bugs.html">G77 Bugs</a></li>
   </ul>
-  <li><a href="http://gcc.gnu.org/onlinedocs/c-tree_toc.html">Tree Representation Internals</a>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gxxint_toc.html">G++ Internals Manual</a>
-  <li><a href="http://gcc.gnu.org/onlinedocs/cpp_toc.html">CPP Manual</a>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gcov_toc.html">GCOV Manual</a>
-  <li><a href="http://gcc.gnu.org/onlinedocs/libstdc++/documentation.html">libstdc++-v3 Documentation</a>
-  <li><a href="http://gcc.gnu.org/onlinedocs/chill_toc.html">Chill Manual</a>
-  <li><a href="http://gcc.gnu.org/onlinedocs/objc-features_toc.html">ObjC Features</a>
+  <li><a href="http://gcc.gnu.org/onlinedocs/c-tree_toc.html">Tree
+       Representation Internals</a></li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/gxxint_toc.html">G++ Internals
+       Manual</a></li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/cpp_toc.html">CPP Manual</a></li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/gcov_toc.html">GCOV Manual</a></li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/libstdc++/documentation.html">libstdc++-v3 Documentation</a></li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/chill_toc.html">Chill
+      Manual</a></li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/objc-features_toc.html">ObjC
+      Features</a></li>
 </ul>
 
 </body>
