--- a/htdocs/gcc-3.0/branch.html
+++ b/htdocs/gcc-3.0/branch.html
@@ -47,7 +47,7 @@ email to <a href="mailto:mark@codesourcery.com">Mark Mitchell</a>.</p>
 <tr>
   <td>i686-pc-linux-gnu
   <td><a href="mailto:mark@codesourcery.com">Mark Mitchell</a>
-  <td>
+  <td><a href="i686-pc-linux-gnu.log">Test Summary</a>
 <tr>
   <td>mips-sgi-irix6.5
   <td><a href="mailto:mark@codesourcery.com">Mark Mitchell</a>
@@ -55,7 +55,7 @@ email to <a href="mailto:mark@codesourcery.com">Mark Mitchell</a>.</p>
 <tr>
   <td>powerpc-ibm-aix4.3.3.0
   <td><a href="mailto:dje@watson.ibm.com">David Edelsohn</a>
-  <td>
+  <td>Bootstrap Failure
 <tr>
   <td>sparc-sun-solaris-2.7
   <td><a href="mailto:chris@ludwig-alpha.unil.ch">Christian Iseli<a>
