--- a/htdocs/gcc-3.0/branch.html
+++ b/htdocs/gcc-3.0/branch.html
@@ -43,7 +43,7 @@ email to <a href="mailto:mark@codesourcery.com">Mark Mitchell</a>.</p>
 <tr>
   <td>i386-pc-linux-gnu
   <td><a href="mailto:doko@cs.tu-berlin.de">Matthias Klose</a>
-  <td>
+  <td>Successful Bootstrap
 <tr>
   <td>i686-pc-linux-gnu
   <td><a href="mailto:mark@codesourcery.com">Mark Mitchell</a>
