--- a/htdocs/gcc-3.0/branch.html
+++ b/htdocs/gcc-3.0/branch.html
@@ -69,7 +69,7 @@ email to <a href="mailto:mark@codesourcery.com">Mark Mitchell</a>.</p>
 <li>Obtain the <code>gcc_build</code> script.  You can get it <a
 href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/~checkout~/gcc/contrib/gcc_build?rev=1.9">here</a>.</li>
 
-<li><p>Run it as <code>gcc_build checkout update test</code>.</p>
+<li><p>Run it as <code>gcc_build checkout build test</code>.</p>
 
 <p>See comments
 in the script itself if you are using read-only CVS access, or send
